# vision

./: .gitignore
blobdetection/: CMakeLists.txt  package.xml
blobdetection/config/: params.yaml
blobdetection/launch/: pixeldetect.launch
blobdetection/msg/: depth_point.msg
blobdetection/src/: blobDetector.cpp  blobDetector.hpp  blobdetector.cpp  blobdetector.hpp  closestPixelDetector.cpp  closestPixelDetector.hpp
color_detection/: CMakeLists.txt  package.xml
color_detection/config/: blueParams.yaml  colorDetectionParams.yaml  greenParams.yaml  orangeParams.yaml  purpleParams.yaml  redParams.yaml  yellowParams.yaml
color_detection/launch/: colorDetector.launch
color_detection/msg/: color_status.msg  colors_detected.msg
color_detection/src/: colordetectionnode.cpp  colordetectionnode.hpp
image_conversion/: CMakeLists.txt  package.xml
image_conversion/src/: imageConverter.cpp
object_lib/: CMakeLists.txt  package.xml
object_lib/config/: modelparams.yaml
object_lib/src/: imageExtraction.cpp  imageExtraction.hpp  imageGatherer.cpp  modelLearner.cpp  objectClassifier.cpp
pcl_methods/: CMakeLists.txt  package.xml
pcl_methods/config/: cube_identifier_params.yaml
pcl_methods/launch/: cube_identifier.launch
pcl_methods/src/: cubeidentifiernode.cpp  cubeidentifiernode.hpp  object_clustering.cpp  pcl_test.cpp  plane_extraction.cpp  plane_extraction.hpp  tfpublisher.cpp
picture_taker/: CMakeLists.txt  package.xml
picture_taker/src/: pictureTaker.cpp  pictureTaker.hpp
purple_classifier/: CMakeLists.txt  package.xml
purple_classifier/config/: modelparams.yaml  purple_classifier_params.yaml
purple_classifier/launch/: purpleClassifier.launch
purple_classifier/src/: modelParams.cpp  modelParams.hpp  purpleClassifierNode.cpp  purpleClassifierNode.hpp
test/: CMakeLists.txt
test/src/: formattester.cpp  threshold.cpp
vision/: package.xml
vision_master/: CMakeLists.txt  package.xml
vision_master/launch/: object_detection.launch
vision_master/msg/: object_found.msg
vision_master/src/: evidencenode.cpp  evidencenode.hpp  visionmasternode.cpp  visionmasternode.hpp
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: color_and_cube.msg  color_status.msg  colors_detected.msg  colors_with_shape_info.msg  plane_extracted.msg
visiontest/: CMakeLists.txt  package.xml
visiontest/src/: depthhistogram.cpp  formattester.cpp
