cmake_minimum_required(VERSION 2.8.3)
project(blobdetection)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS roscpp)

catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES blobdetection
#  CATKIN_DEPENDS roscpp
#  DEPENDS system_lib
)


#add_executable(blobdetetor src/blobdetector.cpp)
#target_link_libraries(blobdetector ${catkin_LIBRARIES})
#add_dependencies(blobdetector ${catkin_EXPORTED_TARGETS})
