<?xml version="1.0"?>
<package>
  <name>object_lib</name>
  <version>0.0.0</version>
  <description>Package for working with object descriptions</description>
  <maintainer email="michalst@kth.se">Michal Staniaszek</maintainer>
  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>opencv2</buildtool_depend>
  <run_depend>opencv2</run_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
