<?xml version="1.0"?>
<package>
  <name>object_lib</name>
  <version>0.0.0</version>
  <description>Package for working with object descriptions</description>
  <maintainer email="michalst@kth.se">Michal Staniaszek</maintainer>
  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>  
  <build_depend>sysutil</build_depend>
  <run_depend>sysutil</run_depend>  
  <build_depend>mathutil</build_depend>
  <run_depend>mathutil</run_depend>  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
