<?xml version="1.0"?>
<package>
  <name>pcl_methods</name>
  <version>0.0.0</version>
  <description>Methods using PCL</description>

  <maintainer email="michalst@kth.se">michal</maintainer>

  <license>BSD</license>

  <author email="michalst@kth.se">Michal Staniaszek</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend>  
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libpcl-all</run_depend>
  <build_depend>rosutil</build_depend>
  <run_depend>rosutil</run_depend>  
  <build_depend>visionutil</build_depend>
  <run_depend>visionutil</run_depend>
  <build_depend>pclutil</build_depend>
  <run_depend>pclutil</run_depend>  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
