<?xml version="1.0"?>
<package>
  <name>purple_classifier</name>
  <version>0.0.0</version>
  <description>The purple_classifier package</description>

  <maintainer email="dmitrijl@kth.se">dmitrij</maintainer>

  <license>BSD</license>

  <author email="dmitrijl@kth.se">Dmitrij Lioubartsev</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>
  <run_depend>sensor_msgs</run_depend>
  <buildtool_depend>image_transport</buildtool_depend>
  <run_depend>image_transport</run_depend>
  <buildtool_depend>opencv2</buildtool_depend>
  <run_depend>opencv2</run_depend>  
  <buildtool_depend>cv_bridge</buildtool_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>rosutil</build_depend>
  <run_depend>rosutil</run_depend>  
  <build_depend>visionutil</build_depend>
  <run_depend>visionutil</run_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
