<?xml version="1.0"?>
<package>
  <name>vision_master</name>
  <version>0.0.0</version>
  <description>The vision_master package</description>

  <maintainer email="dmitrijl@kth.se">Dmitrij</maintainer>

  <license>BSD</license>

  <author email="dmitrijl@kth.se">Dmitrij Lioubartsev</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>color_detection</build_depend>
  <run_depend>color_detection</run_depend>  


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
