<?xml version="1.0"?>
<package>
  <name>vision_master</name>
  <version>0.0.0</version>
  <description>The vision_master package</description>

  <maintainer email="dmitrijl@kth.se">Dmitrij</maintainer>

  <license>BSD</license>

  <author email="dmitrijl@kth.se">Dmitrij Lioubartsev</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>ras_msgs</build_depend>
  <run_depend>ras_msgs</run_depend>
  <build_depend>vision_msgs</build_depend>
  <run_depend>vision_msgs</run_depend>
  <build_depend>rosutil</build_depend>
  <run_depend>rosutil</run_depend>	
  <build_depend>visionutil</build_depend>
  <run_depend>visionutil</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
